--- a/app/templates/display_images.html
+++ b/app/templates/display_images.html
@@ -18,12 +18,34 @@
     {% endfor %}
 </div>
 
+{% if results.color_based %}
+    <h2>Color-based Similar Images</h2>
+    <div class="row">
+        {% for image in results.color_based %}
+            <div class="col-md-3">
+                <img src="{{ url_for('uploaded_file_static', filename=image|basename) }}" alt="Color-based Similar Image" class="img-thumbnail">
+            </div>
+        {% endfor %}
+    </div>
+{% endif %}
+
 {% if results.embedding_based %}
     <h2>Embedding-based Similar Images</h2>
     <div class="row">
         {% for image in results.embedding_based %}
             <div class="col-md-3">
                 <img src="{{ url_for('uploaded_file_static', filename=image|basename) }}" alt="Embedding-based Similar Image" class="img-thumbnail">
+            </div>
+        {% endfor %}
+    </div>
+{% endif %}
+
+{% if results.yolo_based %}
+    <h2>YOLO-based Similar Images</h2>
+    <div class="row">
+        {% for image in results.yolo_based %}
+            <div class="col-md-3">
+                <img src="{{ url_for('uploaded_file_static', filename=image|basename) }}" alt="YOLO-based Similar Image" class="img-thumbnail">
             </div>
         {% endfor %}
     </div>
