--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -2,15 +2,23 @@
 {% extends "layout.html" %}
 {% block title %}Upload Images{% endblock %}
 {% block content %}
-<h1 class="mb-4"><a href="https://github.com/AlhaririAnas/Pixelio-Project">Pixelio Project</a></h1>
+<h1 class="mb-4"><a href="https://github.com/AlhaririAnas/Image-recommender">Image Recommender</a></h1>
 <form method="post" enctype="multipart/form-data">
     <div class="form-group">
         <label for="file">Choose files</label>
         <input type="file" class="form-control-file" name="file" id="file" multiple>
     </div>
     <div class="form-group form-check">
-        <input type="checkbox" class="form-check-input" name="similarity_measure" value="embedding" id="embedding" checked>
+        <input type="checkbox" class="form-check-input" name="similarity_measure" value="color" id="color">
+        <label class="form-check-label" for="color">Color</label>
+    </div>
+    <div class="form-group form-check">
+        <input type="checkbox" class="form-check-input" name="similarity_measure" value="embedding" id="embedding">
         <label class="form-check-label" for="embedding">Embedding</label>
+    </div>
+    <div class="form-group form-check">
+        <input type="checkbox" class="form-check-input" name="similarity_measure" value="yolo" id="yolo">
+        <label class="form-check-label" for="yolo">YOLO</label>
     </div>
     <div class="form-group">
         <label for="distance_measure">Choose a distance measure:</label>
